[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "lumache"
authors = [{name = "Graziella", email = "graziella@lumache"}]
dynamic = ["version", "description"]

[project.optional-dependencies]
doc = [
    "sphinx==4.2.0",
    "rst-to-myst==0.3.2",
    "myst-parser==0.18.0",
    "sphinx-autobuild==2021.3.14",
    
]